Fixed some alignment issues with the new dynamic menu

--- a/css/template.css
+++ b/css/template.css
@@ -139,6 +139,7 @@
 
 .menuIcon {
   color: #939393;
+  margin-right:0.25em;
 }
 
 .menuItem > img {
